Consistently use two spaces for indentation